--- a/Adventure/Views/Admin/checkMyActivityOrder.cshtml
+++ b/Adventure/Views/Admin/checkMyActivityOrder.cshtml
@@ -10,7 +10,7 @@
         <div class="page-bar">
             <div class="page-title-breadcrumb">
                 <div class=" pull-left">
-                    <div class="page-title">查看体验</div>
+                    <div class="page-title">查看被预定的体验活动</div>
                 </div>
                 <ol class="breadcrumb page-breadcrumb pull-right">
                     <li>
@@ -19,7 +19,7 @@
                     <li>
                         <a class="parent-item" href="">体验</a>&nbsp;<i class="fa fa-angle-right"></i>
                     </li>
-                    <li class="active">查看体验</li>
+                    <li class="active">被预定的体验活动</li>
                 </ol>
             </div>
         </div>
@@ -27,7 +27,7 @@
             <div class="col-md-12">
                 <div class="card card-box">
                     <div class="card-head">
-                        <header>查看体验</header>
+                        <header>查看被预定的体验活动</header>
                         <div class="tools">
                             <a class="fa fa-repeat btn-color box-refresh" href="javascript:;"></a>
                             <a class="t-collapse btn-color fa fa-chevron-down" href="javascript:;"></a>
@@ -67,9 +67,6 @@
                                                     <td class="center">
                                                         <a href="/Activity/SingleActivity?productID=@ViewBag.returnList[i].activity_id" class="btn btn-tbl-edit btn-xs">
                                                             <i class="fa fa-exclamation-circle"></i>
-                                                        </a>
-                                                        <a href="/Admin/EditActivityOrder" class="btn btn-tbl-edit btn-xs">
-                                                            <i class="fa fa-pencil"></i>
                                                         </a>
                                                         <a href="#" class="btn btn-tbl-delete btn-xs" onclick="">
                                                             <i class="fa fa-trash-o "></i>
