--- a/Adventure/Views/Activity/Index.cshtml
+++ b/Adventure/Views/Activity/Index.cshtml
@@ -6,13 +6,13 @@
 
 </script>
 
-<div class="hero-wrap js-fullheight" style="background-image: url('../images/activity_bg.jpg');">
+<div class="hero-wrap js-fullheight" style="background-image: url('../images/Publish_bg.jpg');">
     <div class="overlay"></div>
     <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
             <div class="col-md-9 ftco-animate mb-5 pb-5 text-center text-md-left" data-scrollax=" properties: { translateY: '70%' }">
-                <h1 class="mb-4" style="color:black" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">精选体验活动</h1>
-                <p  style="color:#f9be37" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><b>尝试一下新的当地居民创设的体验活动？万种风情等你来探索！</b></p>
+                <h1 class="mb-4"  data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">精选体验活动</h1>
+                <p  data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><b>尝试一下新的当地居民创设的体验活动？万种风情等你来探索！</b></p>
             </div>
         </div>
     </div>
@@ -156,7 +156,7 @@
 <section class="ftco-section  testimony-section" style="background-image: url(../images/Favor_bg.jpg);background-color:transparent" data-stellar-background-ratio="0.5">
     <div class="container">
         <div class="row">
-            <div class="col-lg-9">
+            <div class="col-lg">
                 <div class="row">
                     <div class="container ftco-section testimony-section" style="background-color:transparent">
                         <div class="row ftco-animate">
