--- a/Adventure/Views/Admin/ViewHomestaySpecial.cshtml
+++ b/Adventure/Views/Admin/ViewHomestaySpecial.cshtml
@@ -1,7 +1,135 @@
 ﻿
 @{
-    ViewBag.Title = "ViewHomestaySpecial";
+    ViewBag.Title = "查看房源特殊价格";
+    Layout = "~/Views/Admin/Admin_Layout.cshtml";
+
 }
+<script>
+    function deleteInstance(instanceID) {
+        var choice = confirm("是否确认删除该特殊价格?提交后将不可更改。");//确认框。
+        if (choice == true) {
+            $.ajax({
+                type: "post",
+                url: "../Admin/RemoveHomestaySpecial",
+                data: {
+                    instanceID: instanceID
+                },
+                async: false,
+                dataType: 'json',
+                success: function (d) {
+                    var addState = d.isSuccess;
+                    if (addState == true) {//登录成功
+                        console.log(d);
+                        window.location.href = "/Admin/ViewHomestaySpecial";
+                        alert("删除房源特殊价格成功!");
+                    }
+                    else {
+                        //登录失败
+                        console.log(d);
+                        alert(d.message);
+                        window.location.href = "/Admin/ViewHomestaySpecial";
 
-<h2>ViewHomestaySpecial</h2>
+                    }
+                },
+                error: function (a) {
+                    console.log(a);
+                    alert("删除房源特殊价格失败！");
+                }
+            });
+        }
+    }
+</script>
+<!-- start page content -->
+<div class="page-content-wrapper">
+    <div class="page-content">
+        <div class="page-bar">
+            <div class="page-title-breadcrumb">
+                <div class=" pull-left">
+                    <div class="page-title">查看房源特殊价格</div>
+                </div>
+                <ol class="breadcrumb page-breadcrumb pull-right">
+                    <li>
+                        <i class="fa fa-home"></i>&nbsp;<a class="parent-item" href="/Home/Index">主页</a>&nbsp;<i class="fa fa-angle-right"></i>
+                    </li>
+                    <li>
+                        <a class="parent-item" href="">房源</a>&nbsp;<i class="fa fa-angle-right"></i>
+                    </li>
+                    <li class="active">查看房源特殊价格</li>
+                </ol>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-box">
+                    <div class="card-head">
+                        <header>查看房源特殊价格</header>
+                        <div class="tools">
+                            <a class="fa fa-repeat btn-color box-refresh" href="javascript:;"></a>
+                            <a class="t-collapse btn-color fa fa-chevron-down" href="javascript:;"></a>
+                            <a class="t-close btn-color fa fa-times" href="javascript:;"></a>
+                        </div>
+                    </div>
+                    <div class="card-body ">
+                        <div class="table-scrollable">
+                            <table class="table table-hover table-checkable order-column full-width" id="example4">
+                                <thead>
+                                    <tr>
+                                        <th class="center">特殊价格ID</th>
+                                        <th class="center">房源ID</th>
+                                        <th class="center">房源名称</th>
+                                        <th class="center">开始时间</th>
+                                        <th class="center">结束时间</th>
+                                        <th class="center">特殊价格</th>
+                                        <th class="center">操作</th>
 
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        if (ViewBag.returnList != null)
+                                        {
+                                            for (int i = 0; i < ViewBag.returnList.Length; i++)
+                                            {
+                                                <tr class="odd gradeX">
+                                                    <td class="center"> @ViewBag.returnList[i].activity_instance_id </td>
+                                                    <td class="center"> @ViewBag.returnList[i].activity_id </td>
+                                                    <td class="center"> @ViewBag.returnList[i].activity_name </td>
+                                                    <td class="center"> @ViewBag.returnList[i].start_time.ToString("yyyy-MM-dd") </td>
+                                                    <td class="center"> @ViewBag.returnList[i].end_time.ToString("yyyy-MM-dd") </td>
+                                                    @{
+                                                        if (ViewBag.returnList[i].is_booked == 0)
+                                                        {
+                                                            <td class="center">待预定</td>
+
+                                                        }
+                                                        else
+                                                        {
+                                                            <td class="center">已预定</td>
+
+                                                        }
+
+                                                    }
+                                                    <td class="center">  @ViewBag.returnList[i].price</td>
+                                                    <td class="center">
+                                                        <a href="/Activity/SingleActivity?productID=@ViewBag.returnList[i].activity_id" class="btn btn-tbl-edit btn-xs">
+                                                            <i class="fa fa-exclamation-circle"></i>
+                                                        </a>
+                                                        <a class="btn btn-tbl-delete btn-xs" onclick="deleteInstance(@ViewBag.returnList[i].activity_instance_id)">
+                                                            <i class="fa fa-trash-o "></i>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                            }
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- end page content -->
