--- a/Adventure/Views/Admin/checkMyAOrder.cshtml
+++ b/Adventure/Views/Admin/checkMyAOrder.cshtml
@@ -18,7 +18,7 @@
             } else {
                 $.ajax({
                     type: "post",
-                    url: "~/Activity/IcancelActivityOrder",
+                    url: "../Admin/IcancelActivityOrder",
                     data: {
                         toDeleteID: id
                     },
@@ -39,6 +39,30 @@
             alert("订单不允许取消！");
         }
 
+    }
+    function reviewCheck(orderID) {
+        $.ajax({
+            type: "post",
+            url: "../Admin/CheckComment",
+            data: {
+                orderID: orderID,
+                accessWay:1
+            },
+            async: false,
+            dataType: 'json',
+            success: function (d) {//取消成功
+                var reviewState = d.isSuccess;
+                if (reviewState == true) {//登录成功
+                    location.href = '~/Admin/Comment?orderID=' + orderID + "&accessWay=1";
+                } else {
+                    alert(d.message);
+                }
+            },
+            error: function (a) {
+                console.log(a);
+                alert("获取评论状态失败!");
+            }
+        });
     }
 </script>
 
@@ -123,9 +147,9 @@
 
                                                     <td class="center">
                                                         <a href="~/Activity/SingleActivity?productID=@ViewBag.returnList[i].activity_order_id" class="btn btn-tbl-edit btn-xs">
-                                                            <i class="fa fa-pencil"></i>
+                                                            <i class="fa fa-exclamation-circle"></i>
                                                         </a>
-                                                        <a href="~/Admin/EditActivityOrder" class="btn btn-tbl-edit btn-xs">
+                                                        <a onclick="reviewCheck(@ViewBag.returnList[i].activity_order_id)" class="btn btn-tbl-edit btn-xs">
                                                             <i class="fa fa-pencil"></i>
                                                         </a>
                                                         <a class="btn btn-tbl-delete btn-xs" onclick="cancelCheck(@ViewBag.returnList[i].status,@ViewBag.returnList[i].activity_order_id)">
