--- a/Adventure/Views/Admin/checkMyHOrder.cshtml
+++ b/Adventure/Views/Admin/checkMyHOrder.cshtml
@@ -3,6 +3,32 @@
     ViewBag.Title = "checkMyHOrder";
     Layout = "~/Views/Admin/Admin_Layout.cshtml";
 }
+<script>
+function reviewCheck(orderID) {
+        $.ajax({
+            type: "post",
+            url: "../Admin/CheckComment",
+            data: {
+                orderID: orderID,
+                accessWay:2
+            },
+            async: false,
+            dataType: 'json',
+            success: function (d) {//取消成功
+                var reviewState = d.isSuccess;
+                if (reviewState == true) {//登录成功
+                    location.href = '~/Admin/Comment?orderID=' + orderID + "&accessWay=2";
+                } else {
+                    alert(d.message);
+                }
+            },
+            error: function (a) {
+                console.log(a);
+                alert("获取评论状态失败!");
+            }
+        });
+    }
+    </script>
 
 <!--start page content-->
 <div class="page-content-wrapper">
@@ -68,9 +94,9 @@
                                                     <td class="center">@ViewBag.returnList[i].status</td>
                                                     <td class="center">
                                                         <a href="/Activity/SingleActivity?productID=@ViewBag.returnList[i].homestay_order_id" class="btn btn-tbl-edit btn-xs">
-                                                            <i class="fa fa-pencil"></i>
+                                                            <i class="fa fa-exclamation-circle"></i>
                                                         </a>
-                                                        <a href="/Admin/EditHomestayOrder" class="btn btn-tbl-edit btn-xs">
+                                                        <a onclick="reviewCheck(@ViewBag.returnList[i].homestay_order_id)" class="btn btn-tbl-edit btn-xs">
                                                             <i class="fa fa-pencil"></i>
                                                         </a>
                                                         <!--TODO:comment-->
