--- a/Adventure/Views/Admin/checkMyHomestayOrder.cshtml
+++ b/Adventure/Views/Admin/checkMyHomestayOrder.cshtml
@@ -45,14 +45,14 @@
         <div class="page-bar">
             <div class="page-title-breadcrumb">
                 <div class=" pull-left">
-                    <div class="page-title">查看民宿订单</div>
+                    <div class="page-title">查看被预定房源订单</div>
                 </div>
                 <ol class="breadcrumb page-breadcrumb pull-right">
                     <li>
                         <i class="fa fa-home"></i>&nbsp;<a class="parent-item" href="/Home/Index">主页</a>&nbsp;<i class="fa fa-angle-right"></i>
                     </li>
                     <li>
-                        <a class="parent-item" href="">民宿订单</a>&nbsp;<i class="fa fa-angle-right"></i>
+                        <a class="parent-item" href="">被预定房源订单</a>&nbsp;<i class="fa fa-angle-right"></i>
                     </li>
                     <li class="active">所有订单</li>
                 </ol>
