--- a/Adventure/Views/Blog/NewBlog.cshtml
+++ b/Adventure/Views/Blog/NewBlog.cshtml
@@ -5,116 +5,67 @@
 
 <link rel="stylesheet" href="~/Content/Activity/paper-bootstrap-wizard.css" />
 
-@*<div class="hero-wrap js-fullheight" style="background-image: url('../images/Contact_bg.jpg');">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
-                <div class="col-md-9 text-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                    <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">发布体验活动</h1>
-                </div>
-            </div>
-        </div>
-    </div>*@
+<script>
+    $(document).ready(function () {
 
-@*<section class="ftco-section contact-section ftco-degree-bg">
-        <form role="form" action="~/Blog/SubmitBlog" method="post" id="new-blog-form" enctype="multipart/form-data">
+        var flag = "@ViewBag.flag";
+        var errorMessage = "@ViewBag.errorMessage";
+        if (flag == "1") {
 
-            <div>
-                <label for="title">标题</label>
-                <input class="blogTitle" type="text" name="blogTitle" id="blogTitle" value="" size="22">
-            </div>
+        } else {
+            if (flag != "") {
+                      @{ ViewBag.flag = null; }
+                alert(errorMessage);
+                window.location.href = "../Blog";
+            }
+        }
+    })
+</script>
 
-
-
-            <div>
-                <label for="picture">图片</label>
-                <input class="blogPicture" type="file" accept="image/*" name="blogPicture" id="blogPicture" value="" size="22">
-            </div>
-
-            <div>
-                <label for="content">内容</label>
-                <textarea class="blogContent" name="blogContent" id="blogContent" cols="58" rows="10"></textarea>
-            </div>
-
-            <div>
-                <input class="btn" name="blogSubmit" type="submit" id="blog-submit" value="Submit Comment">
-            </div>
-
-        </form>
-
-    </section>*@
 
 <div class="image-container set-full-height" style="background-image: url('../images/Publish_bg.jpg');">
     <!-- Big container -->
     <div class="container">
-        <div>
-            <!-- Wizard container -->
-            <div class="wizard-container">
-                <div class="card wizard-card" id="wizard">
-                    <div class="wizard-header">
-                        <h3 class="wizard-title">发布旅行故事</h3>
-                        <hr />
-                    </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <!-- Wizard container -->
+                <div class="wizard-container">
+                    <div class="card wizard-card" id="wizard">
+                        <div class="wizard-header">
+                            <h3 class="wizard-title">发布旅行故事</h3>
+                            <hr />
+                        </div>
 
-                    @*<form role="form" action="~/Blog/SubmitBlog" method="post" id="new-blog-form" enctype="multipart/form-data">
+                        <form role="form" action="~/Blog/SubmitBlog" method="post" id="new-blog-form" enctype="multipart/form-data" style="text-align:center">
 
-                            <div class="row">
-                                <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
-                                    <div class="form-group">
-                                        <label>标题</label>
-                                        <input class="blogTitle" type="text" name="blogTitle" id="blogTitle" value="" size="22">
-                                    </div>
-                                </div>
-                                <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
-                                    <div class="form-group">
-                                        <label>内容</label>
-                                        <textarea class="blogContent" name="blogContent" id="blogContent" cols="58" rows="10"></textarea>
-                                    </div>
-                                </div>
-                                <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
-                                    <div class="form-group">
-                                        <label>图片/一张</label>
-                                        <input class="blogPicture" type="file" accept="image/*" name="blogPicture" id="blogPicture" value="" size="22">
-                                    </div>
-                                </div>
-                                <div class="col-sm-8 col-sm-offset-2" style="margin-left:auto; margin-right:auto;">
-                                    <div class="form-group">
-                                        <input class="btn" name="blogSubmit" type="submit" id="blog-submit" value="Submit Comment">
-                                    </div>
-                                </div>
+                            <div style="width:75%;margin:auto;text-align:left">
+                                <label for="title">标题</label>
+                                <br />
+                                <input class="blogTitle" type="text" name="blogTitle" id="blogTitle" value="" maxlength="100" style="width:100%">
                             </div>
 
-                        </form>*@
+                            <div style="width:75%;margin:auto;text-align:left">
+                                <label for="picture">图片</label>
+                                <br />
+                                <input class="blogPicture" type="file" accept="image/*" name="blogPicture" id="blogPicture" value="" size="22" style="width:100%">
+                            </div>
 
-                    <form role="form" action="~/Blog/SubmitBlog" method="post" id="new-blog-form" enctype="multipart/form-data" style="text-align:center">
+                            <div style="width:75%;margin:auto;text-align:left">
+                                <label for="content">内容</label>
+                                <br />
+                                <textarea class="blogContent" name="blogContent" id="blogContent" maxlength="300" cols="58" rows="10" style="width:100%"></textarea>
+                            </div>
 
-                        <div style="width:75%;margin:auto;text-align:left">
-                            <label for="title">标题</label>
-                            <br />
-                            <input class="blogTitle" type="text" name="blogTitle" id="blogTitle" value="" size="22" style="width:100%">
-                        </div>
+                            <div>
+                                <input class="btn" name="blogSubmit" type="submit" id="blog-submit" value="提交">
+                            </div>
 
-                        <div style="width:75%;margin:auto;text-align:left">
-                            <label for="picture">图片</label>
-                            <br />
-                            <input class="blogPicture" type="file" accept="image/*" name="blogPicture" id="blogPicture" value="" size="22" style="width:100%">
-                        </div>
+                        </form>
 
-                        <div style="width:75%;margin:auto;text-align:left">
-                            <label for="content">内容</label>
-                            <br />
-                            <textarea class="blogContent" name="blogContent" id="blogContent" cols="58" rows="10" style="width:100%"></textarea>
-                        </div>
-
-                        <div>
-                            <input class="btn" name="blogSubmit" type="submit" id="blog-submit" value="提交">
-                        </div>
-
-                    </form>
-
+                    </div>
                 </div>
+                <!-- wizard container -->
             </div>
-            <!-- wizard container -->
         </div>
     </div>
     <!--  big container -->
