--- a/Adventure/Views/Order/Index.cshtml
+++ b/Adventure/Views/Order/Index.cshtml
@@ -2,99 +2,116 @@
     ViewBag.Title = "订单确认";
     Layout = "~/Views/Order/Order_Layout.cshtml";
 }
-<script>
-    $(document).ready(function () {
-      
-        var productID = "@ViewBag.productID";
-        var accessWay = "@ViewBag.accessWay";
-        
-            if (productID == "-1" || accessWay == "-1" ) {
-                alert("Illegal Access!");
-                window.location.href = "/Home";
-            } 
-    })
-</script>
+
+
+<h1 class="book" style="margin-top:80px">Order Confirmation</h1>
 @{ 
-    var orderType = "";
-    var productID = ViewBag.productID;
-    var accessWay = ViewBag.accessWay;
-    if (ViewBag.accessWay == 1)
-    {
-        orderType = "homestay";
-    }
-    else { orderType = "activity"; }
+    var price = ViewBag.activityInstance.price;
+    double fee = price * 5 / 100;
 }
-<h1 class="book" style="margin-top:80px">Confirm your @orderType order</h1>
-
 <div class="reg">
-
     <h1>赶快确认下列信息，开启您的奇妙之旅！</h1>
-
     <div class="members">
-        <div class="adult">
-            <h2>产品编号:@productID</h2>
-            <h2>产品名称:@productID</h2>
-            <h2>产品单价:@productID 元</h2>
-        </div>
+        <h2 style="margin-top:30px">产品编号:@ViewBag.activity.activity_id</h2>
+        <h2 style="margin-top:10px">产品名称:@ViewBag.activity.activity_name</h2>
+        <h2 style="margin-top:10px">产品单价:@ViewBag.activityInstance.price 元</h2>
+        <h2 style="margin-top:10px">平台服务费:@fee 元</h2>
 
         <div class="clear"></div>
     </div>
-
-    <div class="members">
-        <h2>人数</h2>
-        <div class="dropdown-button">
-            <select class="dropdown" tabindex="10" data-settings='{"wrapperClass":"flat"}'>
-                <option value="">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-            </select>
+        <div class="members">
+            <h2 style="margin-top:10px">活动人数:@ViewBag.activity.max_member_limit</h2>
+            <!--<div class="dropdown-button">
+                <select class="dropdown" tabindex="10" data-settings='{"wrapperClass":"flat"}'>
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>
+            </div>-->
+            <div class="clear"></div>
         </div>
-
-        <div class="clear"></div>
-    </div>
-
-    <div class="book-pag" style="margin-top:20px">
-        <h2>选择日期</h2>
-        <div class="book-pag-frm1">
-            <label>开始时间</label>
-            <input class="date" id="datepicker1" type="text" value="Date" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" required="">
+        <div class="book-pag" style="margin-top:10px">
+            <h2>活动日期</h2>
+            <div class="book-pag-frm1">
+                <label>开始时间:@ViewBag.activityInstance.start_time.ToString("yyyy-MM-dd")</label>
+                <!--<input class="date" id="datepicker1" type="text" value="Date" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" required="">-->
+            </div>
+            <div class="book-pag-frm2">
+                <label>结束时间:@ViewBag.activityInstance.end_time.ToString("yyyy-MM-dd")</label>
+                <!--<input class="date" id="datepicker2" type="text" value="Date" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" required="">-->
+            </div>
+            <div class="clear"></div>
         </div>
-        <div class="book-pag-frm2">
-            <label>结束时间</label>
-            <input class="date" id="datepicker2" type="text" value="Date" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" required="">
-        </div>
-        <div class="clear"></div>
-    </div>
+        <!--Date Picker-->
+        <script src="~/Scripts/jquery-ui.js"></script>
+        <script>
+            $(function () {
+                $("#datepicker,#datepicker1,#datepicker2").datepicker();
+            });
 
-    <!--Date Picker-->
-
-    <script src="~/Scripts/jquery-ui.js"></script>
-    <script>
-        $(function () {
-            $("#datepicker,#datepicker1,#datepicker2").datepicker();
+              function submitForm() {
+        $.ajax({
+            type: "post",
+            url: "../Order/AddActivityOrder",
+            data: {
+                start_time: "@ViewBag.activityInstance.start_time",
+                end_time:"@ViewBag.activityInstance.end_time",
+                price:"@ViewBag.activityInstance.price",
+                activity_instance_id:"@ViewBag.activityInstance.activity_instance_id",
+                payment: $('input:radio:checked').val()
+            },
+            async: false,
+            dataType: 'json',
+            success: function (d) {
+                var addState = d.isSuccess;
+                if (addState == true) {//登录成功
+                    console.log(d);
+                    alert("订单创建成功!");
+                    window.location.href = "../Activity/SingleActivity?productID=@ViewBag.activity.activity_id";
+                }
+                else {
+                    //登录失败
+                    console.log(d);
+                    alert(d.message);
+                }
+            },
+            error: function (a) {
+                console.log(a);
+                alert(a.message);
+            }
         });
-    </script>
-    <!--//Date Picker-->
 
+    }
+    function returnToDetail() {
+        window.location.href = "../Activity/SingleActivity?productID=@ViewBag.activity.activity_id";
+    }
+        </script>
+        <!--//Date Picker-->
 
-    <div class="food">
-        <h2>选择支付方式</h2>
-        <div class="radio-btns">
-            <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio" checked=""><i></i>支付宝</label> </div></div>
-            <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>微信支付</label> </div></div>
-            <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>银联支付</label> </div></div>
-            <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>京东钱包</label> </div></div>
-            <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>Paypal</label> </div></div>
-            <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>云闪付</label> </div></div>
-
+        <div class="food">
+            <h2>选择支付方式</h2>
+            <div class="radio-btns">
+                <div class="check_box"> <div class="radio"> <label><input type="radio" value="支付宝" name="radio" checked=""><i></i>支付宝</label> </div></div>
+                <div class="check_box"> <div class="radio"> <label><input type="radio" value="微信支付" name="radio"><i></i>微信支付</label> </div></div>
+                <div class="check_box"> <div class="radio"> <label><input type="radio" value="银联支付" name="radio"><i></i>银联支付</label> </div></div>
+                <div class="check_box"> <div class="radio"> <label><input type="radio" value="京东钱包" name="radio"><i></i>京东钱包</label> </div></div>
+                <div class="check_box"> <div class="radio"> <label><input type="radio" value="Paypal" name="radio"><i></i>Paypal</label> </div></div>
+                <div class="check_box"> <div class="radio"> <label><input type="radio" value="云闪付" name="radio"><i></i>云闪付</label> </div></div>
+            </div>
         </div>
-    </div>
+        <div class="submit">
+            <div class="members">
+                <div class="adult">
+                    <input type="button" class="book" onclick="returnToDetail()" value="返回修改">
+                </div>
 
-    <div class="submit">
-        <input type="submit" class="book" value="提交预定">
-    </div>
+                <div class="adult">
+                    <input type="button" class="book" onclick="submitForm()" value="提交预定">
+                </div>
 
+            </div>
+            </div>
 </div>
